--- a/.github/workflows/maven-publish-image.yml
+++ b/.github/workflows/maven-publish-image.yml
@@ -9,7 +9,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}/employee-service
-  VERSION: ${{ github.event.head_commit.message }}
+  VERSION: ${{ github.sha }}
 
 jobs:
   build:
