--- a/.github/workflows/maven-publish-image.yml
+++ b/.github/workflows/maven-publish-image.yml
@@ -33,13 +33,13 @@ jobs:
       run: mvn clean install -DskipTests
 
     - name: Install GitVersion
-      uses: gittools/actions/gitversion/setup@v0.9
+      uses: gittools/actions/gitversion/setup@v0.9.7
       with:
           versionSpec: '5.1.x' 
         
     - name: Use GitVersion
-      id: gitversion # step id used as reference for output values
-      uses: gittools/actions/gitversion/execute@v0.9
+      id: gitversion
+      uses: gittools/actions/gitversion/execute@v0.9.7
     - run: |
         echo "Major: ${{ steps.gitversion.outputs.major }}"
         echo "Minor: ${{ steps.gitversion.outputs.minor }}"
@@ -53,7 +53,7 @@ jobs:
         echo "BuildMetaDataPadded: ${{ steps.gitversion.outputs.buildMetaDataPadded }}"
         echo "FullBuildMetaData: ${{ steps.gitversion.outputs.fullBuildMetaData }}"
         echo "MajorMinorPatch: ${{ steps.gitversion.outputs.majorMinorPatch }}"
-        echo "SemVer: ${{ steps.gitversion.outputs.semVer }}"
+        echo "j: ${{ steps.gitversion.outputs.semVer }}"
         echo "LegacySemVer: ${{ steps.gitversion.outputs.legacySemVer }}"
         echo "LegacySemVerPadded: ${{ steps.gitversion.outputs.legacySemVerPadded }}"
         echo "AssemblySemVer: ${{ steps.gitversion.outputs.assemblySemVer }}"
