--- a/.github/workflows/maven-publish-image.yml
+++ b/.github/workflows/maven-publish-image.yml
@@ -31,7 +31,17 @@ jobs:
 
     - name: Build with Maven
       run: mvn clean install -DskipTests
-
+      
+    - uses: actions/checkout@v1
+    
+    - name: Fetch all history for all tags and branches
+      run: git fetch --prune
+      
+    - name: Setup.NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '5.0.100-preview.1.20155.7'
+        
     - name: Install GitVersion
       uses: gittools/actions/gitversion/setup@v0.9.7
       with:
