--- a/.github/workflows/create-image.yml
+++ b/.github/workflows/create-image.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}/employee-service
+  IMAGE_NAME: ${{ github.actor }}/employee-service
   VERSION: ${{ github.sha }}
 
 jobs:
@@ -21,6 +21,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+          fetch-depth: 0
       
     - name: Set up JDK 21
       uses: actions/setup-java@v4
@@ -33,33 +35,35 @@ jobs:
       run: mvn clean install -DskipTests
         
     - name: Install GitVersion
-      uses: gittools/actions/gitversion/setup@v0.9.7
+      uses: gittools/actions/gitversion/setup@v3.1.11
       with:
-        versionSpec: '5.x' 
+       versionSpec: '6.0.x'
         
     - name: Determine Version
       id: gitversion
-      uses: gittools/actions/gitversion/execute@v0.9.7
+      uses: gittools/actions/gitversion/execute@v3.1.11
       with:
         useConfigFile: true
-        configFilePath: GitVersion.yml
 
     - name: Display GitVersion outputs
       run: |
         echo "SemVer: ${{ steps.gitversion.outputs.semVer }}"
-        
-    - name: Build container image
-      run: docker build . -t  ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.gitversion.outputs.semVer }}
 
     - name: Log into container registry
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.CR_GITHUB_TOKEN }}
-        
-    - name: Publish container image
-      run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.gitversion.outputs.semVer }}
-    
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
       
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+      
+    - name: Build and push
+      uses: docker/build-push-action@v6
+      with:
+        push: true
+        tags: ${{ github.actor }}/employee-service:${{ steps.gitversion.outputs.semVer }}
