--- a/.github/workflows/create-image.yml
+++ b/.github/workflows/create-image.yml
@@ -44,6 +44,7 @@ jobs:
       uses: gittools/actions/gitversion/execute@v3.1.11
       with:
         useConfigFile: true
+        configFilePath: GitVersion.yml
 
     - name: Display GitVersion outputs
       run: |
