--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,14 +1,28 @@
-mode: ContinuousDelivery
-tag-prefix: '[vV]'
-commit-message-incrementing: MergeMessageOnly
+mode: ContinuousDeployment
+next-version: 1.0.0.0
+assembly-versioning-scheme: MajorMinorPatch
+assembly-file-versioning-scheme: MajorMinorPatch
 branches:
-  hotfix:
-    regex: hotfix?[/-]
-    source-branches: ['main']
+  master:
+    increment: Minor
+    regex: (^master$|^origin\/master$|^main$|^origin\/main$)
+    tag: ''
+  develop:
+    increment: Minor
+    regex: ^dev(elop)?(ment)?$
+    tag: alpha
+  release:
+    increment: Minor
+    regex: '^release/*'
+    tag: beta
+    is-release-branch: true
+    source-branches: ['master']
   feature:
     increment: Minor
-    regex: feature?[/-]
-  main:
-    is-mainline: true
+    regex: '^feature/*'
+    tag: useBranchName
+    source-branches: ['master']
+  hotfix:
     increment: Patch
-    regex: main$
+    regex: '^hotfix/*'
+    source-branches: ['master']
