--- a/.github/workflows/create-image.yml
+++ b/.github/workflows/create-image.yml
@@ -1,7 +1,7 @@
 # This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
 
-name: CI Pipeline Build And Push Image --${{ steps.gitversion.outputs.semVer }}
+name: CI Pipeline Build And Push Image
 
 on:
   workflow_dispatch:
@@ -9,7 +9,6 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.actor }}/employee-service
-  VERSION: ${{ steps.gitversion.outputs.semVer }}
 
 jobs:
   build:
