--- a/.github/workflows/create-image.yml
+++ b/.github/workflows/create-image.yml
@@ -47,7 +47,7 @@ jobs:
 
     - name: Display GitVersion outputs
       run: |
-        echo "SemVer: ${{ steps.gitversion.outputs.semVer }}"
+        echo "SemVer: ${{ env.semVer }}"
 
     - name: Log into container registry
       uses: docker/login-action@v3
@@ -66,4 +66,4 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         push: true
-        tags: ${{ github.actor }}/employee-service:${{ steps.gitversion.outputs.semVer }}
+        tags: ${{ github.actor }}/employee-service:${{ env.semVer }}
