--- a/.github/workflows/create-image.yml
+++ b/.github/workflows/create-image.yml
@@ -58,7 +58,10 @@ jobs:
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
-      
+
+    - name: Build with Maven
+      run: mvn clean install -DskipTests
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       
