--- a/.github/workflows/create-image.yml
+++ b/.github/workflows/create-image.yml
@@ -32,6 +32,9 @@ jobs:
 
     - name: Build with Maven
       run: mvn clean install -DskipTests
+
+    - name: Verify JAR file
+      run: ls -l target/
         
     - name: Install GitVersion
       uses: gittools/actions/gitversion/setup@v3.1.11
@@ -60,6 +63,9 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+
+    - name: Verify JAR file
+      run: ls -l target/
       
     - name: Build and push
       uses: docker/build-push-action@v6
