--- a/.github/workflows/create-image.yml
+++ b/.github/workflows/create-image.yml
@@ -62,7 +62,9 @@ jobs:
       uses: docker/setup-buildx-action@v3
 
     - name: Verify JAR file
-      run: ls -l ./target/
+      run: | 
+        ls -l ./target/
+        pwd
       
     - name: Build and push
       uses: docker/build-push-action@v6
