--- a/.github/workflows/create-image.yml
+++ b/.github/workflows/create-image.yml
@@ -1,7 +1,7 @@
 # This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
 
-name: CI Pipeline Build And Push Image 
+name: CI Pipeline Build And Push Image
 
 on:
   workflow_dispatch:
@@ -55,19 +55,8 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.CR_GITHUB_TOKEN }}
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
+    - name: Build container image
+      run: docker build . -t  ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.semVer }}
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Verify JAR file
-      run: | 
-        ls -l ./target/
-        pwd
-      
-    - name: Build and push
-      uses: docker/build-push-action@v6
-      with:
-        push: true
-        tags: ${{ github.actor }}/employee-service:${{ env.semVer }}
+    - name: Publish container image
+      run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.semVer }}
