--- a/.github/workflows/create-image.yml
+++ b/.github/workflows/create-image.yml
@@ -47,6 +47,24 @@ jobs:
     - name: Display GitVersion outputs
       run: |
         echo "SemVer: ${{ env.semVer }}"
+        
+    - name: Build container image
+      run: docker build . -t  ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.semVer }}
+
+    - name: OCI image vulnerability scanning
+      uses: anchore/scan-action@v3
+      id: scan
+      with:
+        image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.semVer }}
+        fail-build: true
+        severity-cutoff: high
+        output-format: sarif
+
+    - name: Upload vulnerability report
+      uses: github/codeql-action/upload-sarif@v3
+      if: success() || failure()
+      with:
+        sarif_file: ${{ steps.scan.outputs.sarif }}
 
     - name: Log into container registry
       uses: docker/login-action@v3
@@ -54,9 +72,6 @@ jobs:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.CR_GITHUB_TOKEN }}
-
-    - name: Build container image
-      run: docker build . -t  ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.semVer }}
 
     - name: Publish container image
       run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.semVer }}
