--- a/.github/workflows/create-image.yml
+++ b/.github/workflows/create-image.yml
@@ -52,16 +52,16 @@ jobs:
       run: docker build . -t  ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.semVer }}
 
     - name: OCI image vulnerability scanning
-      uses: anchore/scan-action@v3
+      uses: anchore/scan-action@v2
       id: scan
       with:
-        image: ${{ env.IMAGE_NAME }}:${{ env.semVer }}
+        image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.semVer }}
         fail-build: true
         severity-cutoff: high
         output-format: sarif
 
     - name: Upload vulnerability report
-      uses: github/codeql-action/upload-sarif@v3
+      uses: github/codeql-action/upload-sarif@v2
       if: success() || failure()
       with:
         sarif_file: ${{ steps.scan.outputs.sarif }}
