--- a/.github/workflows/create-image.yml
+++ b/.github/workflows/create-image.yml
@@ -52,7 +52,7 @@ jobs:
       run: docker build . -t  ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.semVer }}
 
     - name: OCI image vulnerability scanning
-      uses: anchore/scan-action@v3
+      uses: anchore/scan-action@v6
       id: scan
       with:
         image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.semVer }}
@@ -60,6 +60,9 @@ jobs:
         severity-cutoff: high
         output-format: sarif
 
+    - name: Inspect action SARIF report
+      run: cat ${{ steps.scan.outputs.sarif }}
+  
     - name: Upload vulnerability report
       uses: github/codeql-action/upload-sarif@v3
       if: success() || failure()
