--- a/.github/workflows/create-image.yml
+++ b/.github/workflows/create-image.yml
@@ -15,7 +15,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      packages: write
       security-events: write
+      actions: read
 
     steps:
     - name: Checkout code
