--- a/.github/workflows/create-image.yml
+++ b/.github/workflows/create-image.yml
@@ -66,6 +66,7 @@ jobs:
       uses: github/codeql-action/upload-sarif@v3
       if: success() || failure()
       with:
+        token: ${{ secrets.TOKEN_SCAN }}
         sarif_file: ${{ steps.scan.outputs.sarif }}
 
     - name: Log into container registry
